# rs-stitchly

./: .gitignore  AGENTS.md  Cargo.toml  DIRTREE.md  Justfile  package.json  pnpm-lock.yaml
.codex/skills/git-quick-save/: SKILL.md
.codex/skills/git-quick-save/agents/: openai.yaml
.codex/skills/stitchly-duckdb-repair/: SKILL.md
.codex/skills/stitchly-duckdb-repair/agents/: openai.yaml
.codex/skills/stitchly-duckdb-repair/scripts/: repair_workflow_duckdb.sh
.codex/skills/stitchly-node-contract/: SKILL.md
.codex/skills/stitchly-node-contract/agents/: openai.yaml
.codex/skills/stitchly-run-runtime/: SKILL.md
.codex/skills/stitchly-run-runtime/agents/: openai.yaml
.codex/skills/stitchly-rust-quality/: SKILL.md
.codex/skills/stitchly-rust-quality/agents/: openai.yaml
.codex/skills/stitchly-rust-quality/references/: compile-routing.md
.codex/skills/stitchly-ui-work/: SKILL.md
.codex/skills/stitchly-ui-work/agents/: openai.yaml
.codex/skills/stitchly-workspace-storage/: SKILL.md
.codex/skills/stitchly-workspace-storage/agents/: openai.yaml
apps/web/: AGENTS.md  env.local  index.html  package.json  tsconfig.json  vite.config.js
apps/web/src/: App.jsx  App.test.jsx  main.jsx  styles.css  vitest.setup.js
apps/web/src/components/: CanvasWorkspace.jsx  CanvasWorkspace.test.jsx  WorkflowCanvas.jsx  WorkflowCanvas.test.jsx
apps/web/src/lib/: api.js  canvasDnD.js  catalogSync.js  nodeCard.js  nodeCard.test.js  runSync.js  shell.js  shell.test.js  workflow.js  workflow.test.js  workflowTemplates.js  workflowTemplates.test.js  workspaceConnectionsSync.js
crates/: AGENTS.md
crates/api_contract/: Cargo.toml
crates/api_contract/src/: lib.rs
crates/node_registry/: Cargo.toml
crates/node_registry/src/: lib.rs
crates/runtime_adapter_contract/: Cargo.toml
crates/runtime_adapter_contract/src/: lib.rs
crates/runtime_adapters/: Cargo.toml
crates/runtime_adapters/.stitchly/tooling/dolt-home/.dolt/eventsData/: XZgqtlfz7x13HPFVgDG9Bw.devts
crates/runtime_adapters/src/: lib.rs  load_to_duckdb_core.rs
crates/runtime_core/: Cargo.toml
crates/runtime_core/src/: lib.rs
crates/runtime_server/: Cargo.toml  build.rs
crates/runtime_server/src/: lib.rs  platform.rs
crates/workflow_schema/: Cargo.toml
crates/workflow_schema/src/: lib.rs
design_lab/: AGENTS.md  README.md
design_lab/canvas/: README.md
design_lab/canvas/01_canvas_control/: README.md  index.html  styles.css
design_lab/canvas/02_node_management_panel/: README.md  index.html  styles.css
design_lab/canvas/03_send_email_node_manager/: README.md  index.html  styles.css
design_lab/canvas/04_text_input_node_manager/: README.md  index.html  styles.css
design_lab/dashboard/v1/: README.md  shared.css
design_lab/dashboard/v1/00_dashboard_reference_analysis/: README.md  index.html
design_lab/dashboard/v1/01_dashboard_shell/: README.md  index.html
design_lab/dashboard/v1/02_dashboard_table/: README.md  index.html
design_lab/dashboard/v1/03_dashboard_sidebar/: README.md  index.html
design_lab/dashboard/v1/04_dashboard_collapsed_sidebar/: README.md  index.html
design_lab/dashboard/v1/05_dashboard_mobile/: README.md  index.html
design_lab/data_sources/: README.md
design_lab/data_sources/v1/: README.md  shared.css
design_lab/integrations/: README.md
design_lab/integrations/v1/: README.md  shared.css
design_lab/login/v1/: README.md  shared.css
design_lab/menu/: README.md
design_lab/menu/v1/: README.md  shared.css
design_lab/nodes/v1/: README.md  shared.css
design_lab/runs/: README.md
design_lab/runs/v1/: README.md  shared.css
design_lab/runs_history/: README.md
design_lab/runs_history/v1/: README.md  shared.css
design_lab/runs_node/: README.md
design_lab/runs_node/v1/: README.md  shared.css
docs/: AGENTS.md  README.md
docs/00_foundation/: 00_intro.md  01_node_types.md  02_architecture.md  03_workflow_schema.md  04_execution_runtime.md  05_frontend_canvas.md  06_backend_api.md  07_persistence.md  08_security_and_sandboxing.md  09_performance_and_scaling.md  10_mvp_scope.md  11_decision_log.md  12_dataflow_and_workloads.md  13_testing_strategy.md  14_repo_structure_and_build.md  15_node_definition_spec.md  16_connections_and_secrets.md  17_artifacts_and_dataset_refs.md  18_run_lifecycle_and_events.md  19_compute_model.md  20_app_auth_and_workspace_spec.md  21_workflow_management_spec.md  22_run_history_and_debugging_spec.md  23_storage_root_and_identity_architecture.md  24_workflow_duckdb_storage_spec.md
docs/01_workflows/: 00_finance_workflow_ideas.md  01_finance_table_grouping_and_naming.md  20_workflow_example_dolt.md  21_dolthub_market_data_duckdb_ingest.md
docs/02_build/: 00_llm_build_prompt.md  01_dev_build_modes.md
docs/03_ui/: 00_frontend_canvas.md  01_node_state_model.md  02_ui_roadmap.md  03_node_reference_analysis.md  04_ui_lab_workflow.md  05_node_design_inventory.md  06_workflow_management_ui.md
docs/04_execution/: 01_node_io_and_execution_contracts.md  02_output_contract.md  03_execution_contract.md  04_adapter_contract.md  05_multi_edge_semantics.md  06_run_execution_implementation_spec.md  README.md
docs/05_venture/: 00_idea_framework.md  01_idea_record_template.md  02_scoring_rubric.md  03_recommendation_rules.md  04_portfolio_backlog.md  05_idea_generation_loop.md  06_idea_source_catalog.md  07_pre_score_template.md  20_idea_savr.md  21_idea_waterwatch.md  22_idea_gridza.md  README.md
docs/06_trading_research/: 00_systematic_technical_strategy_research.md  01_derivatives_and_volatility_strategy_research.md
docs/07_data_contracts/: 00_earnings_curated_tables.md  01_rates_curated_tables.md
scripts/: dev_ui_agent.ps1  dev_ui_agent.sh  generate_brand_symbol_assets.mjs
src/: lib.rs
tests/: integration.rs
tests/fixtures/api/: connections.json  node_definitions.json
tests/fixtures/runs/: basic_text_preview_events.json
tests/fixtures/workflows/: basic_text_preview.json
tests/integration/: run_flow.rs
(+121 files in other folders)
