[package]
name = "runtime_adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
node_registry = { path = "../node_registry" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
workflow_schema = { path = "../workflow_schema" }
