[package]
name = "runtime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
api_contract = { path = "../api_contract" }
chrono = { workspace = true }
node_registry = { path = "../node_registry" }
runtime_adapter_contract = { path = "../runtime_adapter_contract" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
workflow_schema = { path = "../workflow_schema" }

[dev-dependencies]
duckdb = { version = "1.2.2", features = ["bundled", "parquet"] }
runtime_adapters = { path = "../runtime_adapters" }
