[package]
name = "runtime_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
api_contract = { path = "../api_contract" }
axum = { workspace = true }
futures = { workspace = true }
runtime_core = { path = "../runtime_core" }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
workflow_schema = { path = "../workflow_schema" }

