[package]
name = "runtime_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
api_contract = { path = "../api_contract" }
argon2 = "0.5.3"
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
runtime_core = { path = "../runtime_core" }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
workflow_schema = { path = "../workflow_schema" }
